fixed overlapping issue between boxes

--- a/homepage.css
+++ b/homepage.css
@@ -41,42 +41,30 @@ body {
   margin: 0px 5px 0px 0px;
 }
 
-#box1 {
+.box {
   background-color: transparent;
   width: 300px;
   height: 200px;
   perspective: 1000px;
   position: absolute;
+}
+
+#box1 {
   top: 50%;
   right: 52%;
 }
 
 #box2 {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  perspective: 1000px;
-  position: absolute;
   top: 20%;
   right: 52%;
 }
 
 #box3 {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  perspective: 1000px;
-  position: absolute;
   top: 20%;
   right: 32%;
 }
 
 #box4 {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  perspective: 1000px;
-  position: absolute;
   top: 50%;
   right: 32%;
 }
@@ -100,17 +88,21 @@ h2 {
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.8s;
+  transition: transform 0.8s, z-index 0.8s;
   transform-style: preserve-3d;
   transition: 0.6s;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-box:hover .flip-box-inner {
+.box:hover .flip-box-inner {
   transform: rotateY(180deg);
   scale: 1.4;
   box-shadow: 0px 0px 100px #bb86fc;
   border-radius: 20px;
+}
+
+.box:hover {
+  z-index: 10;
 }
 
 /* .flip-box:hover > .flip-box:not(:hover) {
@@ -142,6 +134,41 @@ h2 {
 
 .back {
   font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.btn {
+  font-size: 1.2rem;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  transition: 0.6s;
+  top: 7rem;
+  text-decoration: none;
+  font-family: "Pixelify Sans";
+  border: 0.2px black solid;
+  background: transparent;
+  opacity: 1;
+}
+
+.btn:active {
+  scale: 0.92;
+}
+
+.btn:hover {
+  border: #000000;
+  color: white;
+  background-color: rgb(0, 0, 0);
 }
 /*this is a trial
 
